--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-asgiref==3.2.3
-Django==3.0
+Django==2.2.6
+djangorestframework==3.10.3
+psycopg2==2.8.4
+Pygments==2.4.2
 pytz==2019.3
+selenium==3.141.0
 sqlparse==0.3.0
+urllib3==1.25.7
