--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Django==2.2.8
+Django==2.2.6
 djangorestframework==3.10.3
 psycopg2==2.8.4
 Pygments==2.4.2
+python-dotenv==0.10.3
 pytz==2019.3
 selenium==3.141.0
 sqlparse==0.3.0
