--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Django==2.2.6
+django-dotenv==1.4.2
+django-environ==0.4.5
 djangorestframework==3.10.3
+gunicorn==20.0.4
 psycopg2==2.8.4
 Pygments==2.4.2
 python-dotenv==0.10.3
