--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+# needed for FTs
+before_script:
+  - wget "https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz"
+  - tar xfz geckodriver-v0.24.0-linux64.tar.gz
+  - sudo mv geckodriver /usr/local/bin
+  - 'export DISPLAY=:99.0'
+  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+  - sleep 3
 # command to run tests
 script:
   - python manage.py test lists
